--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,132 @@
-/**index.wxss**/
-.userinfo {
+/* poages/index/index.wxss */
+.indexContainer{
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
+.avatarUrl{
+  width: 100%;
+  height: 100%;
+}
+
+button{
+  width: 200rpx;
+  height: 200rpx;
   border-radius: 50%;
+  margin: 100rpx 0;
+  font-size: 24rpx;
+  line-height: 200rpx;
+  text-align: center;
 }
 
-.userinfo-nickname {
-  color: #aaa;
+.navContainer{
+  display: flex;
 }
 
-.usermotto {
-  margin-top: 200px;
+.navItem{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 20%;
+}
+
+.navItem .iconfont{
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 100rpx;
+  background: rgb(240, 19, 19);
+  font-size: 50rpx;
+  color: white;
+  margin: 20rpx 0;
+}
+
+.navItem text{
+  font-size: 26rpx;
+}
+
+.recommendContainer{
+  padding: 20rpx;
+}
+
+/* 推荐内容 */
+.recommendScroll{
+  margin-left: 20rpx;
+  display: flex;
+  height: 300rpx;
+}
+
+.scrollItem{
+  width: 200rpx;
+  margin-right: 20rpx;
+}
+
+.scrollItem image{
+  width: 200rpx;
+  height: 200rpx;
+  border-radius: 10rpx;
+}
+
+.scrollItem text{
+  font-size: 26rpx;
+  /* 单行文本溢出隐藏 省略号代替 */
+  /* white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; */
+
+  /* 多行文本溢出隐藏 省略号代替 */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical; /* 设置对其模式 */
+  -webkit-line-clamp: 2;
+}
+
+/* 排行榜  */
+.topList {
+  padding: 20rpx;
+}
+
+.topListSwiper {
+  height: 400rpx;
+}
+
+.swiperItem {
+  width: 96%;
+  background: #fbfbfb;
+}
+.swiperItem .title {
+  font-size: 30rpx;
+  line-height: 80rpx;
+
+}
+
+.musicItem {
+  /* 当一个元素设置为flex，其子元素会自动成为block元素*/
+  display: flex;
+  margin-bottom: 20rpx;
+}
+
+.musicItem image{
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 6rpx;
+}
+
+.musicItem .count {
+  width: 100rpx;
+  height: 100rpx;
+  text-align: center;
+  line-height: 100rpx;
+}
+
+.musicItem .musicName {
+  height: 100rpx;
+  line-height: 100rpx;
+  max-width: 400rpx;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
